@@ -20,7 +20,7 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  *
  *
- * $Id: Display_Shortcuts.bsh,v 1.3 2001/11/06 17:57:35 jgellene Exp $
+ * $Id: Display_Shortcuts.bsh,v 1.4 2002/01/21 10:54:33 spestov Exp $
  *
  * requires jEdit3.1pre5
  *
@@ -54,6 +54,8 @@ import javax.swing.table.*;
 
 Vector makeShortcutsVector()
 {
+	v = new Vector();
+
 	EditAction[] actions = jEdit.getActions();
 	for(int i = 0; i < actions.length; i++)
 	{
@@ -74,6 +76,8 @@ Vector makeShortcutsVector()
 			v.addElement(makeRow(label,shortcut1,shortcut2));
 		}
 	}
+
+	return v;
 }
 
 /*
